# cookiecutter-uv-package

./: .gitignore  CHANGELOG.md  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: checks.yml  docs.yml  publish.yml  release-please.yml  setup-protection.yml  uv-update.yml
cookiecutter_py_package/: cli.py
cookiecutter_python_package/: cli.py
cookiecutter_uv_package/: cli.py
docs/: examples.md  index.md  prompt-arguments.md  tutorial.md
docs/features/: ci-cd.md  code-quality.md  index.md  makefile.md  publishing.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: helpers.py  test_basic_generation.py  test_cicd_options.py  test_cli.py  test_license_options.py  test_validation.py
{{cookiecutter.project_slug}}/: .release-please-manifest.json  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  release-please-config.json
{{cookiecutter.project_slug}}/.github/workflows/: checks.yml  coverage.yml  publish.yml  release-please.yml  setup-protection.yml  uv-update.yml  {% if cookiecutter.publish_to_pypi == 'yes' %}publish.yml{% endif %}
{{cookiecutter.project_slug}}/examples/: basic_usage.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
